@@ -877,8 +877,8 @@
           <listitem>
             <para>
               Seeks to the position <varname>TIME</varname> (in
-              seconds) of entry <varname>SONGPOS</varname> in the
-              playlist.
+              seconds; fractions allowed) of entry
+              <varname>SONGPOS</varname> in the playlist.
             </para>
           </listitem>
         </varlistentry>
@@ -893,7 +893,8 @@
           <listitem>
             <para>
               Seeks to the position <varname>TIME</varname> (in
-              seconds) of song <varname>SONGID</varname>.
+              seconds; fractions allowed) of song
+              <varname>SONGID</varname>.
             </para>
           </listitem>
         </varlistentry>
@@ -907,9 +908,10 @@
           </term>
           <listitem>
             <para>
-              Seeks to the position <varname>TIME</varname> within the
-              current song.  If prefixed by '+' or '-', then the time
-              is relative to the current playing position.
+              Seeks to the position <varname>TIME</varname> (in
+              seconds; fractions allowed) within the current song.  If
+              prefixed by '+' or '-', then the time is relative to the
+              current playing position.
             </para>
           </listitem>
         </varlistentry>
