@@ -191,8 +191,8 @@ check_float(Client &client, float *value_r, const char *s)
 bool
 ParseCommandArg(Client &client, SongTime &value_r, const char *s)
 {
-	unsigned value;
-	bool success = check_unsigned(client, &value, s);
+	float value;
+	bool success = check_float(client, &value, s) && value >= 0;
 	if (success)
 		value_r = SongTime::FromS(value);
 
@@ -202,8 +202,8 @@ ParseCommandArg(Client &client, SongTime &value_r, const char *s)
 bool
 ParseCommandArg(Client &client, SignedSongTime &value_r, const char *s)
 {
-	int value;
-	bool success = check_int(client, &value, s);
+	float value;
+	bool success = check_float(client, &value, s);
 	if (success)
 		value_r = SignedSongTime::FromS(value);
 
